[package]
name = "picpay-rust"
version = "0.0.25"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
hostname = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
cargo-edit = "0.13.4"
neo4rs = "0.8.0"
futures = "0.3.31"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
tower = "0.5.2"

[build-dependencies]
monk = "0.2.5"
